libraries/aptj/lib/APT/APTAPI.fixed.h

long __stdcall MOT_GetVelParamLimits(long lSerialNum, float *pfMaxAccn, float *pfMaxVel);
long __stdcall MOT_SetHomeParams(long lSerialNum, long lDirection, long lLimSwitch, float fHomeVel, float fZeroOffset);
long __stdcall MOT_GetHomeParams(long lSerialNum, long *plDirection, long *plLimSwitch, float *pfHomeVel, float *pfZeroOffset);
long __stdcall MOT_GetStatusBits(long lSerialNum, long *plStatusBits);
long __stdcall MOT_SetBLashDist(long lSerialNum, float fBLashDist);
long __stdcall MOT_GetBLashDist(long lSerialNum, float *pfBLashDist);
long __stdcall MOT_SetMotorParams(long lSerialNum, long lStepsPerRev, long lGearBoxRatio);
long __stdcall MOT_GetMotorParams(long lSerialNum, long *plStepsPerRev, long *plGearBoxRatio);
long __stdcall MOT_SetStageAxisInfo(long lSerialNum, float fMinPos, float fMaxPos, long lUnits, float fPitch);
long __stdcall MOT_GetStageAxisInfo(long lSerialNum, float *pfMinPos, float *pfMaxPos, long *plUnits, float *pfPitch);
long __stdcall MOT_SetHWLimSwitches(long lSerialNum, long lRevLimSwitch, long lFwdLimSwitch);
long __stdcall MOT_GetHWLimSwitches(long lSerialNum, long *plRevLimSwitch, long *plFwdLimSwitch);
long __stdcall MOT_SetPIDParams(long lSerialNum, long lProp, long lInt, long lDeriv, long lIntLimit);
long __stdcall MOT_GetPIDParams(long lSerialNum, long *plProp, long *plInt, long *plDeriv, long *plIntLimit);
long __stdcall MOT_GetPosition(long lSerialNum, float *pfPosition);
long __stdcall MOT_MoveHome(long lSerialNum, BOOL bWait);
long __stdcall MOT_MoveRelativeEx(long lSerialNum, float fRelDist, BOOL bWait);
long __stdcall MOT_MoveAbsoluteEx(long lSerialNum, float fAbsPos, BOOL bWait);
long __stdcall MOT_MoveVelocity(long lSerialNum, long lDirection);
long __stdcall MOT_StopProfiled(long lSerialNum);
// Brushless DC Servo Specific Exports.
long __stdcall MOT_SetDCCurrentLoopParams(long lSerialNum, long lProp, long lInt, long lIntLim, long lIntDeadBand, long lFFwd);
long __stdcall MOT_GetDCCurrentLoopParams(long lSerialNum, long *plProp, long *plInt, long *plIntLim, long *plIntDeadBand, long *plFFwd);