libraries/aptj/src/aptj/bindings/APTLibrary.java


  @Convention(Convention.Style.StdCall)
  @org.bridj.ann.CLong
  protected native static long MOT_GetVelParamLimits(@org.bridj.ann.CLong long lSerialNum, @Ptr long pfMaxAccn, @Ptr long pfMaxVel);

  /**
   * Original signature : <code>long MOT_SetHomeParams(long, long, long, float, float)</code><br>
   * <i>native declaration : lib\APT\APTAPI.fixed.h:88</i>
   */
  @Convention(Convention.Style.StdCall)
  @org.bridj.ann.CLong
  public static native long MOT_SetHomeParams(@org.bridj.ann.CLong long lSerialNum, @org.bridj.ann.CLong long lDirection, @org.bridj.ann.CLong long lLimSwitch, float fHomeVel, float fZeroOffset);

  /**
   * Original signature : <code>long MOT_GetHomeParams(long, long*, long*, float*, float*)</code><br>
   * <i>native declaration : lib\APT\APTAPI.fixed.h:89</i>
   */
  @Convention(Convention.Style.StdCall)
  @org.bridj.ann.CLong
  public static long MOT_GetHomeParams(@org.bridj.ann.CLong long lSerialNum, Pointer<org.bridj.CLong> plDirection, Pointer<org.bridj.CLong> plLimSwitch, Pointer<Float> pfHomeVel, Pointer<Float> pfZeroOffset)
  {
    return MOT_GetHomeParams(lSerialNum, Pointer.getPeer(plDirection), Pointer.getPeer(plLimSwitch), Pointer.getPeer(pfHomeVel), Pointer.getPeer(pfZeroOffset));
  }

  @Convention(Convention.Style.StdCall)
  @org.bridj.ann.CLong
  protected native static long MOT_GetHomeParams(@org.bridj.ann.CLong long lSerialNum, @Ptr long plDirection, @Ptr long plLimSwitch, @Ptr long pfHomeVel, @Ptr long pfZeroOffset);

  /**
   * Original signature : <code>long MOT_GetStatusBits(long, long*)</code><br>
   * <i>native declaration : lib\APT\APTAPI.fixed.h:90</i>
   */
  @Convention(Convention.Style.StdCall)
  @org.bridj.ann.CLong
  public static long MOT_GetStatusBits(@org.bridj.ann.CLong long lSerialNum, Pointer<org.bridj.CLong> plStatusBits)
  {
    return MOT_GetStatusBits(lSerialNum, Pointer.getPeer(plStatusBits));
  }

  @Convention(Convention.Style.StdCall)
  @org.bridj.ann.CLong
  protected native static long MOT_GetStatusBits(@org.bridj.ann.CLong long lSerialNum, @Ptr long plStatusBits);

  /**
   * Original signature : <code>long MOT_SetBLashDist(long, float)</code><br>
   * <i>native declaration : lib\APT\APTAPI.fixed.h:92</i>
   */
  @Convention(Convention.Style.StdCall)
  @org.bridj.ann.CLong
  public static native long MOT_SetBLashDist(@org.bridj.ann.CLong long lSerialNum, float fBLashDist);

  /**
   * Original signature : <code>long MOT_GetBLashDist(long, float*)</code><br>
   * <i>native declaration : lib\APT\APTAPI.fixed.h:93</i>
   */
  @Convention(Convention.Style.StdCall)
  @org.bridj.ann.CLong
  public static long MOT_GetBLashDist(@org.bridj.ann.CLong long lSerialNum, Pointer<Float> pfBLashDist)
  {
    return MOT_GetBLashDist(lSerialNum, Pointer.getPeer(pfBLashDist));
  }

  @Convention(Convention.Style.StdCall)
  @org.bridj.ann.CLong
  protected native static long MOT_GetBLashDist(@org.bridj.ann.CLong long lSerialNum, @Ptr long pfBLashDist);

  /**
   * Original signature : <code>long MOT_SetMotorParams(long, long, long)</code><br>
   * <i>native declaration : lib\APT\APTAPI.fixed.h:94</i>
   */
  @Convention(Convention.Style.StdCall)
  @org.bridj.ann.CLong
  public static native long MOT_SetMotorParams(@org.bridj.ann.CLong long lSerialNum, @org.bridj.ann.CLong long lStepsPerRev, @org.bridj.ann.CLong long lGearBoxRatio);

  /**
   * Original signature : <code>long MOT_GetMotorParams(long, long*, long*)</code><br>
   * <i>native declaration : lib\APT\APTAPI.fixed.h:95</i>
   */
  @Convention(Convention.Style.StdCall)
  @org.bridj.ann.CLong
  public static long MOT_GetMotorParams(@org.bridj.ann.CLong long lSerialNum, Pointer<org.bridj.CLong> plStepsPerRev, Pointer<org.bridj.CLong> plGearBoxRatio)
  {
    return MOT_GetMotorParams(lSerialNum, Pointer.getPeer(plStepsPerRev), Pointer.getPeer(plGearBoxRatio));
  }

  @Convention(Convention.Style.StdCall)
  @org.bridj.ann.CLong
  protected native static long MOT_GetMotorParams(@org.bridj.ann.CLong long lSerialNum, @Ptr long plStepsPerRev, @Ptr long plGearBoxRatio);

  /**
   * Original signature : <code>long MOT_SetStageAxisInfo(long, float, float, long, float)</code><br>
   * <i>native declaration : lib\APT\APTAPI.fixed.h:96</i>
   */
  @Convention(Convention.Style.StdCall)
  @org.bridj.ann.CLong
  public static native long MOT_SetStageAxisInfo(@org.bridj.ann.CLong long lSerialNum, float fMinPos, float fMaxPos, @org.bridj.ann.CLong long lUnits, float fPitch);

  /**
   * Original signature : <code>long MOT_GetStageAxisInfo(long, float*, float*, long*, float*)</code><br>
   * <i>native declaration : lib\APT\APTAPI.fixed.h:97</i>
   */
  @Convention(Convention.Style.StdCall)
  @org.bridj.ann.CLong
  public static long MOT_GetStageAxisInfo(@org.bridj.ann.CLong long lSerialNum, Pointer<Float> pfMinPos, Pointer<Float> pfMaxPos, Pointer<org.bridj.CLong> plUnits, Pointer<Float> pfPitch)
  {
    return MOT_GetStageAxisInfo(lSerialNum, Pointer.getPeer(pfMinPos), Pointer.getPeer(pfMaxPos), Pointer.getPeer(plUnits), Pointer.getPeer(pfPitch));
  }

  @Convention(Convention.Style.StdCall)
  @org.bridj.ann.CLong
  protected native static long MOT_GetStageAxisInfo(@org.bridj.ann.CLong long lSerialNum, @Ptr long pfMinPos, @Ptr long pfMaxPos, @Ptr long plUnits, @Ptr long pfPitch);

  /**
   * Original signature : <code>long MOT_SetHWLimSwitches(long, long, long)</code><br>
   * <i>native declaration : lib\APT\APTAPI.fixed.h:98</i>
   */
  @Convention(Convention.Style.StdCall)
  @org.bridj.ann.CLong
  public static native long MOT_SetHWLimSwitches(@org.bridj.ann.CLong long lSerialNum, @org.bridj.ann.CLong long lRevLimSwitch, @org.bridj.ann.CLong long lFwdLimSwitch);

  /**
   * Original signature : <code>long MOT_GetHWLimSwitches(long, long*, long*)</code><br>
   * <i>native declaration : lib\APT\APTAPI.fixed.h:99</i>
   */
  @Convention(Convention.Style.StdCall)
  @org.bridj.ann.CLong
  public static long MOT_GetHWLimSwitches(@org.bridj.ann.CLong long lSerialNum, Pointer<org.bridj.CLong> plRevLimSwitch, Pointer<org.bridj.CLong> plFwdLimSwitch)
  {
    return MOT_GetHWLimSwitches(lSerialNum, Pointer.getPeer(plRevLimSwitch), Pointer.getPeer(plFwdLimSwitch));
  }

  @Convention(Convention.Style.StdCall)
  @org.bridj.ann.CLong
  protected native static long MOT_GetHWLimSwitches(@org.bridj.ann.CLong long lSerialNum, @Ptr long plRevLimSwitch, @Ptr long plFwdLimSwitch);

  /**
   * Original signature : <code>long MOT_SetPIDParams(long, long, long, long, long)</code><br>
   * <i>native declaration : lib\APT\APTAPI.fixed.h:100</i>
   */
  @Convention(Convention.Style.StdCall)
  @org.bridj.ann.CLong
  public static native long MOT_SetPIDParams(@org.bridj.ann.CLong long lSerialNum, @org.bridj.ann.CLong long lProp, @org.bridj.ann.CLong long lInt, @org.bridj.ann.CLong long lDeriv, @org.bridj.ann.CLong long lIntLimit);

  /**
   * Original signature : <code>long MOT_GetPIDParams(long, long*, long*, long*, long*)</code><br>
   * <i>native declaration : lib\APT\APTAPI.fixed.h:101</i>
   */
  @Convention(Convention.Style.StdCall)
  @org.bridj.ann.CLong
  public static long MOT_GetPIDParams(@org.bridj.ann.CLong long lSerialNum, Pointer<org.bridj.CLong> plProp, Pointer<org.bridj.CLong> plInt, Pointer<org.bridj.CLong> plDeriv, Pointer<org.bridj.CLong> plIntLimit)
  {
    return MOT_GetPIDParams(lSerialNum, Pointer.getPeer(plProp), Pointer.getPeer(plInt), Pointer.getPeer(plDeriv), Pointer.getPeer(plIntLimit));
  }

  @Convention(Convention.Style.StdCall)
  @org.bridj.ann.CLong
  protected native static long MOT_GetPIDParams(@org.bridj.ann.CLong long lSerialNum, @Ptr long plProp, @Ptr long plInt, @Ptr long plDeriv, @Ptr long plIntLimit);

  /**
   * Original signature : <code>long MOT_GetPosition(long, float*)</code><br>
   * <i>native declaration : lib\APT\APTAPI.fixed.h:103</i>
   */
  @Convention(Convention.Style.StdCall)
  @org.bridj.ann.CLong
  public static long MOT_GetPosition(@org.bridj.ann.CLong long lSerialNum, Pointer<Float> pfPosition)
  {
    return MOT_GetPosition(lSerialNum, Pointer.getPeer(pfPosition));
  }

  @Convention(Convention.Style.StdCall)
  @org.bridj.ann.CLong
  protected native static long MOT_GetPosition(@org.bridj.ann.CLong long lSerialNum, @Ptr long pfPosition);

  /**
   * Original signature : <code>long MOT_MoveHome(long, BOOL)</code><br>
   * <i>native declaration : lib\APT\APTAPI.fixed.h:104</i>
   */
  @Convention(Convention.Style.StdCall)
  @org.bridj.ann.CLong
  public static native long MOT_MoveHome(@org.bridj.ann.CLong long lSerialNum, int bWait);

  /**
   * Original signature : <code>long MOT_MoveRelativeEx(long, float, BOOL)</code><br>
   * <i>native declaration : lib\APT\APTAPI.fixed.h:105</i>
   */
  @Convention(Convention.Style.StdCall)
  @org.bridj.ann.CLong
  public static native long MOT_MoveRelativeEx(@org.bridj.ann.CLong long lSerialNum, float fRelDist, int bWait);

  /**
   * Original signature : <code>long MOT_MoveAbsoluteEx(long, float, BOOL)</code><br>
   * <i>native declaration : lib\APT\APTAPI.fixed.h:106</i>
   */
  @Convention(Convention.Style.StdCall)
  @org.bridj.ann.CLong
  public static native long MOT_MoveAbsoluteEx(@org.bridj.ann.CLong long lSerialNum, float fAbsPos, int bWait);

  /**
   * Original signature : <code>long MOT_MoveVelocity(long, long)</code><br>
   * <i>native declaration : lib\APT\APTAPI.fixed.h:107</i>
   */
  @Convention(Convention.Style.StdCall)
  @org.bridj.ann.CLong
  public static native long MOT_MoveVelocity(@org.bridj.ann.CLong long lSerialNum, @org.bridj.ann.CLong long lDirection);

  /**
   * Original signature : <code>long MOT_StopProfiled(long)</code><br>
   * <i>native declaration : lib\APT\APTAPI.fixed.h:108</i>
   */
  @Convention(Convention.Style.StdCall)
  @org.bridj.ann.CLong
  public static native long MOT_StopProfiled(@org.bridj.ann.CLong long lSerialNum);

  /**
   * Brushless DC Servo Specific Exports.<br>
   * Original signature : <code>long MOT_SetDCCurrentLoopParams(long, long, long, long, long, long)</code><br>
   * <i>native declaration : lib\APT\APTAPI.fixed.h:111</i>
   */
  @Convention(Convention.Style.StdCall)
  @org.bridj.ann.CLong
  public static native long MOT_SetDCCurrentLoopParams(@org.bridj.ann.CLong long lSerialNum, @org.bridj.ann.CLong long lProp, @org.bridj.ann.CLong long lInt, @org.bridj.ann.CLong long lIntLim, @org.bridj.ann.CLong long lIntDeadBand, @org.bridj.ann.CLong long lFFwd);

  /**
   * Original signature : <code>long MOT_GetDCCurrentLoopParams(long, long*, long*, long*, long*, long*)</code><br>
   * <i>native declaration : lib\APT\APTAPI.fixed.h:112</i>
   */
  @Convention(Convention.Style.StdCall)
  @org.bridj.ann.CLong
  public static long MOT_GetDCCurrentLoopParams(@org.bridj.ann.CLong long lSerialNum, Pointer<org.bridj.CLong> plProp, Pointer<org.bridj.CLong> plInt, Pointer<org.bridj.CLong> plIntLim, Pointer<org.bridj.CLong> plIntDeadBand, Pointer<org.bridj.CLong> plFFwd)
  {
    return MOT_GetDCCurrentLoopParams(lSerialNum, Pointer.getPeer(plProp), Pointer.getPeer(plInt), Pointer.getPeer(plIntLim), Pointer.getPeer(plIntDeadBand), Pointer.getPeer(plFFwd));
  }

  @Convention(Convention.Style.StdCall)
  @org.bridj.ann.CLong
  protected native static long MOT_GetDCCurrentLoopParams(@org.bridj.ann.CLong long lSerialNum, @Ptr long plProp, @Ptr long plInt, @Ptr long plIntLim, @Ptr long plIntDeadBand, @Ptr long plFFwd);
